Basic HTML and styling

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo List</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Todo List</h1>
+    </header>
+    <main>
+        <aside class="navbar">
+
+            <h1>Home</h1>
+
+            <button>All</button>
+            <button>Today</button>
+            <button>This Week</button>
+
+            <h1>Projects</h1>
+
+            <button>Default</button>
+            <button>New Project</button>
+
+        </aside>
+        <div id="content">
+            <h1 class="project-title">All Tasks</h1>
+            <div id="tasks-list"></div>
+        </div>
+    </main>
+    <footer>Made by Brian Lynch</footer>
 </body>
 </html>
