Create initial javascript modules/classes

--- a/src/template.html
+++ b/src/template.html
@@ -14,18 +14,20 @@
 
             <h1>Home</h1>
 
-            <button>All</button>
-            <button>Today</button>
-            <button>This Week</button>
+            <button id="all-btn">All</button>
+            <button id="today-btn">Today</button>
+            <button id="week-btn">This Week</button>
 
             <h1>Projects</h1>
+            <div id="project-buttons">
+                <button>Default</button>
+            </div>
 
-            <button>Default</button>
-            <button>New Project</button>
+            <button id="new-project-btn">New Project</button>
 
         </aside>
         <div id="content">
-            <h1 class="project-title">All Tasks</h1>
+            <h1 id="project-title">All Tasks</h1>
             <div id="tasks-list"></div>
         </div>
     </main>
