Add task editing

--- a/src/template.html
+++ b/src/template.html
@@ -48,7 +48,7 @@
                     <label for="new-task-title">Title:</label>
                     <input id="new-task-title" type="text" placeholder="Title" name="title" required>
                     <label for="new-task-desc">Description:</label>
-                    <input id="new-task-desc" type="text" placeholder="Description" name="description">
+                    <textarea id="new-task-desc" type="text" placeholder="Description" name="description"></textarea>
                     <label for="new-task-date">Due Date:</label>
                     <input id="new-task-date" type="date" name="due-date" required>
                     <label for="new-task-project">Project:</label>
@@ -57,9 +57,9 @@
                     </select>
                     <label for="new-task-priority">Priority:</label>
                     <select id="new-task-priority" name="priority" required>
-                        <option value="high">High</option>
-                        <option value="medium">Medium</option>
-                        <option value="low" selected>Low</option>
+                        <option value="High">High</option>
+                        <option value="Medium">Medium</option>
+                        <option value="Low">Low</option>
                     </select>
                     <div class="dialog-buttons">
                         <button id="task-submit" type="submit">Add Task</button>
