Improve input styles

--- a/src/template.html
+++ b/src/template.html
@@ -35,6 +35,7 @@
         <dialog id="new-project-dialog">
             <div>
                 <form id="new-project-form">
+                    <label for="new-project-title">Project Name:</label>
                     <input id="new-project-title" type="text" placeholder="Title" name="title" required>
                     <div class="dialog-buttons">
                         <button id="project-submit" type="submit">Add Project</button>
